# cpzonoff

./: .gitignore  Dockerfile  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: branch.yml  main.yml
cpzonoff/: app.py  cli.py
cpzonoff/static/: style.css
cpzonoff/templates/: compose.j2  exec.j2  frame.j2  index.j2  logs.j2
docs/: conf.py  cpzonoff.rst  index.rst
tests/: test_app.py
