[metadata]
name = cpzonoff
version = attr: cpzonoff.version.VERSION
url = https://github.com/wtnb75/cpzonoff
author = Watanabe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = docker compose manager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: System :: Networking
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  cpzonoff=cpzonoff.cli:cli

[options.package_data]
cpzonoff =
  templates/*
  static/*

[flake8]
max-complexity = 10
max-line-length = 120
exclude =
  build,
  dist,
  .git,
  __pycache__
